--- a/modules-available/minilinux/templates/filelist.html
+++ b/modules-available/minilinux/templates/filelist.html
@@ -49,6 +49,7 @@
 </table>
 {{#dltask}}
 <div class="hidden" data-tm-id="{{dltask}}" data-tm-callback="dlTmCb"></div>
+<pre class="collapse" id="error-{{dltask}}"></pre>
 {{/dltask}}
 {{#changelog}}
 <h4>{{lang_changelog}}</h4>
