[statistics] Show X for faulty room plan

--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -96,7 +96,7 @@
 							<td>
 								<a href="?do=roomplanner&amp;locationid={{locationid}}" target="_blank"
 									onclick="window.open(this.href, '_blank', 'toolbar=0,scrollbars,resizable');return false">
-									<img src="api.php?do=roomplanner&amp;show=svg&amp;locationid={{locationid}}&amp;machineuuid={{machineuuid}}"/>
+									<img src="api.php?do=roomplanner&amp;show=svg&amp;locationid={{locationid}}&amp;machineuuid={{machineuuid}}&amp;fallback=1"/>
 								</a>
 							</td>
 						</tr>
