[locationinfo] remove scrollbar placeholder in header + a small alignment correction

--- a/modules-available/locationinfo/templates/frontend-default.html
+++ b/modules-available/locationinfo/templates/frontend-default.html
@@ -330,9 +330,21 @@ optional:
 			overflow-y: hidden !important;
 		}
 
-		.wc-grid-timeslot-header,
 		.wc-header .wc-time-column-header {
+			width: 49px;
+		}
+
+		.wc-grid-timeslot-header {
 			width: 50px;
+		}
+
+		.wc-scrollbar-shim {
+			width: 0 !important;
+		}
+
+		.ui-state-active {
+			border-left-width: 3px !important;
+			border-right-width: 3px !important;
 		}
 
 		#i18n {
