--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -1,6 +1,6 @@
 <h1>
 	{{hostname}} {{#hostname}}–{{/hostname}} {{clientip}}
-	{{#notes}}<a href="#usernotes"><span class="glyphicon glyphicon-exclamation-sign"></span></a>{{/notes}}
+	{{#notes}}<a href="#usernotes"><span class="glyphicon glyphicon-tags"></span></a>{{/notes}}
 </h1>
 <ol class="breadcrumb">
 	{{#locations}}
