--- a/modules-available/sysconfig/templates/list-configs.html
+++ b/modules-available/sysconfig/templates/list-configs.html
@@ -66,7 +66,7 @@
 										href="?do=SysConfig&amp;action=addconfig&amp;edit={{configid}}" title="{{lang_edit}}">
 								<span class="glyphicon glyphicon-edit"></span>
 							</a>
-							<button type="submit" class="btn btn-danger btn-xs" name="del" value="{{configid}}"
+							<button type="submit" class="btn btn-danger btn-xs btn-del-config" name="del" value="{{configid}}"
 										title="{{lang_delete}}" {{perms.config.edit.disabled}} data-confirm="#confirm-delete"
 										data-title="{{config}}">
 								<span class="glyphicon glyphicon-trash"></span>
