--- a/modules-available/rebootcontrol/templates/jumphost-list.html
+++ b/modules-available/rebootcontrol/templates/jumphost-list.html
@@ -6,7 +6,8 @@
 
 <form method="post" action="?do=rebootcontrol">
 	<input type="hidden" name="token" value="{{token}}">
-	<input type="hidden" name="action" value="jumphost">
+	<input type="hidden" name="show" value="jumphost">
+	<input type="hidden" name="action" value="list">
 	<table class="table">
 		<thead>
 		<tr>
