--- a/modules-available/rebootcontrol/templates/task-list.html
+++ b/modules-available/rebootcontrol/templates/task-list.html
@@ -13,7 +13,7 @@
 	{{#list}}
 		<tr>
 			<td>
-				<a href="?do=rebootcontrol&amp;show=task&amp;taskid={{taskId}}">{{mode}}</a>
+				<a href="?do=rebootcontrol&amp;show=task&amp;what=task&amp;taskid={{taskId}}">{{mode}}</a>
 			</td>
 			<td>
 				{{locationName}}
